argocd/argocd-traefik.yaml
# https://colinwilson.uk/2022/03/27/secret-management-with-gitops-and-argo-cd-vault-plugin/#2-update-argo-cd-custom-values-file
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.colinwilson.uk`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: Host(`argocd.colinwilson.uk`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
  tls:
    secretName: argocd-colinwilson-uk-live
